syntax="proto3";

package webproto;
option go_package = "./;webproto";

message RetrieveProductionStationRequest{
    string productionLine=1;
	string stationType=2;
}

message RetrieveProductAttributeRequest{
    string code=1;
	string description=2;
}

message RetrieveProductionCrosswayRequest{
    string productionLine=1;
}